# dairlib

./: et --hard HEAD^  solve_times.mat  xy_ball.mat
bindings/pydairlib/analysis/: BUILD.bazel  log_plotter_franka.py  mbp_plotting_utils.py  process_lcm_log.py  process_lcm_log_test.py
bindings/pydairlib/analysis/plot_configs/: franka_default_plot.yaml
bindings/pydairlib/lcm/: lcm_py_bind_cpp_serializers.cc
bindings/pydairlib/solvers/: BUILD.bazel  __init__.py  lcs_factory_franka_new_py.cc  lcs_new_py.cc  lcs_py.cc
bindings/pydairlib/systems/: BUILD.bazel  __init__.py  controllers_franka_py.cc  lcs_factory_franka_new_py.cc  lcs_py.cc  residual_learner_py.cc  robot_lcm_systems_py.cc
director/scripts/: c3_impedance.json
examples/franka_trajectory_following/: BUILD.bazel  README.md  Update_Filter.py  c3_parameters.h  lcm_adaptive_test.cc  lcm_control_demo.cc  lcm_data_generator.cc  parameters.yaml  procman_script_c3.pmd  run_c3_impedance_experiment.cc  run_state_estimator.cc  simulate_franka_lcm.cc
examples/franka_trajectory_following/adaptive_module/: BUILD.bazel  lcm_adaptive_test.py
examples/franka_trajectory_following/legacy/: BUILD.bazel  call_adaptive.py  lcm_adaptive_module.py  lcm_control_demo.py  lcs_basics.py  residual_learner.py
examples/franka_trajectory_following/robot_properties_fingers/urdf/: franka_box.urdf  sphere.urdf  sphere_model.urdf  trifinger_minimal_collision_2.urdf
examples/franka_trajectory_following/scripts/: BUILD.bazel  end_logging_test.py  franka_logging_utils_test.py  process_frames.py  start_logging.py  start_logging_test.py
examples/franka_trajectory_following/systems/: c3_state_estimator.cc  c3_state_estimator.h
lcmtypes/: lcmt_lcs.lcm  lcmt_learning_data.lcm  lcmt_visual.lcm
solvers/: BUILD.bazel  c3.cc  c3.h  c3_approx.cc  c3_miqp.cc  c3_options.h  lcs.cc  lcs.h  lcs_factory_franka.cc  lcs_factory_franka.h  lcs_factory_franka_cvx.cc  lcs_factory_franka_cvx.h  lcs_factory_franka_cvx_ref.cc  lcs_factory_franka_cvx_ref.h  lcs_factory_franka_new.cc  lcs_factory_franka_new.h  lcs_factory_franka_ref.cc  lcs_factory_franka_ref.h  lcs_new.cc  lcs_new.h  learning_data.cc  learning_data.h
systems/: BUILD.bazel  robot_lcm_systems.cc  robot_lcm_systems.h
systems/controllers/: BUILD.bazel  c3_controller_franka.cc  c3_controller_franka.h  data_generator.cc  data_generator.h  impedance_controller.cc  residual_learner.cc  residual_learner.h
