# -*- python -*-
load("@drake//tools/install:install.bzl", "install")

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:pybind.bzl",
    "drake_pybind_library",
    "get_drake_py_installs",
    "get_pybind_package_info",
    "pybind_py_library",
)

#
#pybind_py_library(
#    name = "c3_py",
#    cc_deps = [
#        "//solvers:c3",
#    ],
#    cc_so_name = "c3",
#    cc_srcs = ["c3.cc"],
#    py_deps = [
#        ":module_py",
#    ],
#    py_imports = ["."],
#)

pybind_py_library(
    name = "pathlcp_py",
    cc_deps = [
        "//solvers/path",
    ],
    cc_so_name = "pathlcp",
    cc_srcs = ["pathlcp.cc"],
    py_deps = [
        ":module_py",
    ],
    py_imports = ["."],
)

pybind_py_library(
    name = "lcs_py",
    cc_deps = [
        "@drake//:drake_shared_library",
        "//solvers:lcs",
    ],
    cc_so_name = "lcs",
    cc_srcs = ["lcs_py.cc"],
    py_deps = [
        "@drake//bindings/pydrake",
        ":module_py",
    ],
    py_imports = ["."],
)

pybind_py_library(
    name = "lcs_new_py",
    cc_deps = [
        "@drake//:drake_shared_library",
        "//solvers:lcs",
    ],
    cc_so_name = "lcs_new",
    cc_srcs = ["lcs_new_py.cc"],
    py_deps = [
        "@drake//bindings/pydrake",
        ":module_py",
    ],
    py_imports = ["."],
)

pybind_py_library(
    name = "lcs_factory_franka_new_py",
    cc_deps = [
        "@drake//:drake_shared_library",
        "//solvers:lcs",
    ],
    cc_so_name = "lcs_factory_franka_new",
    cc_srcs = ["lcs_factory_franka_new_py.cc"],
    py_deps = [
        "@drake//bindings/pydrake",
        ":module_py",
    ],
    py_imports = ["."],
)

# This determines how `PYTHONPATH` is configured, and how to install the
# bindings.
PACKAGE_INFO = get_pybind_package_info("//bindings")

py_library(
    name = "module_py",
    srcs = [
        "__init__.py",
    ],
    imports = PACKAGE_INFO.py_imports,
    deps = [
        "//bindings/pydairlib:module_py",
    ],
)

PY_LIBRARIES = [
    ":pathlcp_py",
    #":c3_py",
    ":lcs_py",
    ":lcs_new_py",
    ":lcs_factory_franka_new_py",
]

# Package roll-up (for Bazel dependencies).
py_library(
    name = "solvers",
    imports = PACKAGE_INFO.py_imports,
    deps = PY_LIBRARIES,
)
