# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "trifinger_urdf",
    data = glob([
    	"robot_properties_fingers/urdf/**",
    	"robot_properties_fingers/urdf/pro/**",
    	"robot_properties_fingers/urdf/edu/**",
    	"robot_properties_fingers/meshes/**",
    	"robot_properties_fingers/meshes/pro/**",
    	"robot_properties_fingers/meshes/pro/detailed/**",
    	"robot_properties_fingers/meshes/edu/**",
        "robot_properties_fingers/cube/**"])
)

py_binary(
    name = "simulate_franka_lcm",
    srcs = ["simulate_franka_lcm.py"],
    deps = [
        "//bindings/pydairlib",
        "@drake//bindings/pydrake",
    ],
    data = [":trifinger_urdf",
            "@drake//manipulation/models/franka_description:models"],
)

py_binary(
    name = "lcm_control_impedence",
    srcs = ["lcm_control_impedence.py"],
    deps = [
        "//bindings/pydairlib",
        "@drake//bindings/pydrake",
    ],
    data = [":trifinger_urdf",
            "@drake//manipulation/models/franka_description:models"],
)

py_binary(
    name = "lcm_control_demo",
    srcs = ["lcm_control_demo.py"],
    deps = [
        "//bindings/pydairlib",
        "@drake//bindings/pydrake",
    ],
    data = [":trifinger_urdf",
            "@drake//manipulation/models/franka_description:models"],
)

py_binary(
    name = "lcm_adaptive_module",
    srcs = ["lcm_adaptive_module.py"],
    deps = [
        "//bindings/pydairlib",
        "@drake//bindings/pydrake",
    ],
    data = [":trifinger_urdf",
            "@drake//manipulation/models/franka_description:models"],
)

py_binary(
    name = "residual_learner",
    srcs = ["residual_learner.py"],
    deps = [
        "//bindings/pydairlib",
        "@drake//bindings/pydrake",
    ],
    data = [":trifinger_urdf",
            "@drake//manipulation/models/franka_description:models"],
)

py_binary(
    name = "lcs_basics",
    srcs = ["lcs_basics.py"],
    deps = [
        "//bindings/pydairlib",
        "@drake//bindings/pydrake",
        "//examples/franka_trajectory_following/scripts:franka_logging_utils_test",
    ],
    data = [":trifinger_urdf",
            "@drake//manipulation/models/franka_description:models"],
)

